k3s-userapps/bonsai/bonsai.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bonsai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonsai
  namespace: bonsai
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: bonsai
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: bonsai
    spec:
      containers:
        - image: 'impworks/bonsai:latest'
          imagePullPolicy: Always
          name: bonsai
          ports:
            - containerPort: 8080
              protocol: TCP
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: bonsai
  namespace: bonsai
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/pod: bonsai
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://bonsai.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Bonsai
    gethomepage.dev/icon: "https://raw.githubusercontent.com/impworks/bonsai/master/src/Bonsai/wwwroot/assets/img/logo.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=bonsai"
  name: bonsai
  namespace: bonsai
  labels:
    kirillorlov.pro/expose: external
spec:
  rules:
  - host: bonsai.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: bonsai
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bonsai.kirillorlov.pro
    secretName: bonsai-tls
